Fix so that wave extension passes with no errors and no contrast errors

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html,
 body {
   min-height: 100vh;
   margin: 0;
-  color: white;
+  color: #ffffff;
 }
 
 body {
@@ -20,19 +20,19 @@ body {
 .player-one-left-side,
 .player-two-right-side {
   text-align: center;
-  font-size: 2em;
+  font-size: 4em;
   padding-top: 2em;
   display: grid;
   grid-template-rows: 0.1fr 0.1fr 1fr;
 }
 
-.player-one-trophies,
-.player-two-trophies {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 0.25em;
-  justify-content: center;
-  padding: 0.25em;
+.player-token {
+  background-color: #000000;
+}
+
+.player-one-wins,
+.player-two-wins {
+  background-color: #000000;
 }
 
 /* game display */
@@ -42,6 +42,11 @@ body {
   text-align: center;
   font-size: 2em;
   padding-top: 1em;
+}
+
+.display-message {
+  font-size: 2em;
+  background-color: #000000;
 }
 
 .game-board {
